# background-stt-zed

./: .gitignore  Cargo.toml  README.md  extension.toml  lsp-stub.py  mcp-launcher.sh  mcp-stub.py  server-launcher.sh  start-server.sh  stop-server.sh
server/: README.md  pyproject.toml  run-local.sh  settings-8764.yaml  settings-8765.yaml  settings.example.yaml  setup.sh
server/src/: __main__.py  app.py  audio.py  config.py  model_manager.py  routes.py
server/src/engines/: __init__.py  base.py  whisper_engine.py
server/tests/: test_basic.py  test_routes.py  tester.py
src/: lib.rs
